--- a/frontend-android/app/src/main/res/values/strings.xml
+++ b/frontend-android/app/src/main/res/values/strings.xml
@@ -9,5 +9,5 @@
 
     <string name="menu_home">Domov</string>
     <string name="menu_gallery">Gallery</string>
-    <string name="menu_slideshow">My reviews</string>
+    <string name="menu_slideshow">Moje recenzie</string>
 </resources>
